--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="24dp"
         android:onClick="findTask"
-        android:text="Find"
+        android:text="@string/find"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskId" />
@@ -24,7 +24,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
         android:onClick="loadTasks"
-        android:text="Load"
+        android:text="@string/load"
         app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
         app:layout_constraintHorizontal_bias="0.346"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="112dp"
         android:layout_height="63dp"
         android:onClick="updateTask"
-        android:text="Update"
+        android:text="@string/update"
         app:layout_constraintBottom_toTopOf="@+id/buttonFind"
         app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
         app:layout_constraintStart_toEndOf="@+id/buttonFind"
@@ -48,7 +48,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:onClick="addTask"
-        android:text="Add"
+        android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
@@ -59,7 +59,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:onClick="deleteTask"
-        android:text="Delete"
+        android:text="@string/delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toEndOf="@+id/buttonUpdate"
@@ -71,7 +71,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="436dp"
         android:layout_marginBottom="84dp"
-        android:text="ID"
+        android:inputType="numberDecimal"
+        android:text="@string/id"
         app:layout_constraintBottom_toTopOf="@+id/buttonFind"
         app:layout_constraintEnd_toStartOf="@+id/taskName"
         app:layout_constraintHorizontal_bias="0.254"
@@ -85,7 +86,8 @@
         android:layout_marginTop="436dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="89dp"
-        android:text="Title"
+        android:inputType="text"
+        android:text="@string/title"
         app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
