--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -8,8 +8,12 @@
         android:id="@+id/Tasktitle"
         android:layout_width="300dp"
         android:layout_height="55dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="35dp"
+        android:layout_marginEnd="78dp"
         android:text=""
         android:textColor="#000"
         android:textSize="50sp" />
@@ -18,11 +22,15 @@
         android:id="@+id/Taskdescription"
         android:layout_width="250dp"
         android:layout_height="55dp"
-        android:layout_below="@id/Tasktitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="-7dp"
+        android:layout_below="@+id/Tasktitle"
 
-        android:layout_marginTop="35dp"
+        android:layout_alignEnd="@+id/Tasktitle"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="560dp"
         android:text=""
         android:textColor="#000"
         android:textSize="30sp" />
