--- a/app/src/main/res/layout/add_task_form.xml
+++ b/app/src/main/res/layout/add_task_form.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@android:color/holo_blue_light"
+    tools:context=".TaskFormActivity"
     >
 
     <EditText
@@ -15,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:hint="ID"
+        android:hint="@string/id"
         android:inputType="textPersonName"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/etForm_Task"
