Recycler View looks nice now and works :)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskId" />
 
-    <Button
+    <!--<Button
         android:id="@+id/buttonLoad"
         android:layout_width="114dp"
         android:layout_height="60dp"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
         app:layout_constraintHorizontal_bias="0.346"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskId" />
+        app:layout_constraintTop_toBottomOf="@+id/taskId" />-->
 
     <Button
         android:id="@+id/buttonUpdate"
@@ -51,17 +51,19 @@
         android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonFind"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
     <Button
         android:id="@+id/buttonDelete"
-        android:layout_width="114dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="109dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="12dp"
         android:onClick="deleteTask"
         android:text="@string/delete"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.407"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/buttonUpdate"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
@@ -94,22 +96,30 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskList"
-        android:layout_width="370dp"
-        android:layout_height="315dp"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_width="390dp"
+        android:layout_height="410dp"
+        android:layout_marginTop="16dp"
+        android:foregroundGravity="center_horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/buttonUpdate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnAddNewTask"
         android:layout_width="114dp"
         android:layout_height="65dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:onClick="openForm"
         android:text="add new task"
+        app:layout_constraintBottom_toTopOf="@+id/buttonFind"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskList" />
+        app:layout_constraintTop_toBottomOf="@+id/taskList"
+        app:layout_constraintVertical_bias="0.949" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
