--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:inputType="numberDecimal"
-        android:text="@string/id"
+        android:hint="@string/id"
         app:layout_constraintBottom_toTopOf="@id/buttonFind"
         app:layout_constraintRight_toLeftOf="@id/taskName"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:inputType="text"
-        android:text="@string/title"
+        android:hint="@string/title"
         app:layout_constraintBottom_toTopOf="@id/buttonDelete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/taskId"
@@ -87,8 +87,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskList"
         android:layout_width="386dp"
-        android:layout_height="510dp"
+        android:layout_height="410dp"
         android:foregroundGravity="center_horizontal"
+        android:padding="4dp"
+        android:background="@android:color/darker_gray"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@id/btnAddNewTask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
