--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,54 +20,36 @@
 
     <Button
         android:id="@+id/buttonUpdate"
-        android:layout_width="300px"
-        android:layout_height="55dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="16dp"
         android:onClick="updateTask"
         android:text="@string/update"
-        app:layout_constraintBottom_toTopOf="@id/btnAddNewTask"
-        app:layout_constraintLeft_toRightOf="@id/buttonFind"
-        app:layout_constraintRight_toLeftOf="@id/buttonDelete"
-        app:layout_constraintTop_toBottomOf="@+id/taskList" />
+        app:layout_constraintBottom_toTopOf="@+id/btnAddNewTask"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskName"
+        app:layout_constraintVertical_bias="0.526" />
 
     <Button
         android:id="@+id/buttonFind"
-        android:layout_width="300px"
-        android:layout_height="55dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
         android:onClick="findTask"
         android:text="@string/find"
         app:layout_constraintBottom_toTopOf="@+id/btnAddNewTask"
-        app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
-        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskId"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/buttonDelete"
-        android:layout_width="300px"
-        android:layout_height="55dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="13dp"
-        android:onClick="deleteTask"
-        android:text="@string/delete"
-        app:layout_constraintBottom_toTopOf="@+id/btnAddNewTask"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonUpdate"
-        app:layout_constraintTop_toBottomOf="@+id/taskName" />
+        app:layout_constraintVertical_bias="0.526" />
 
     <EditText
         android:id="@+id/taskId"
         android:layout_width="170dp"
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:inputType="numberDecimal"
+        android:layout_marginTop="4dp"
         android:hint="@string/id"
-        app:layout_constraintBottom_toTopOf="@id/buttonFind"
-        app:layout_constraintRight_toLeftOf="@id/taskName"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskList" />
 
@@ -75,29 +57,25 @@
         android:id="@+id/taskName"
         android:layout_width="170dp"
         android:layout_height="55dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
-        android:inputType="text"
         android:hint="@string/title"
-        app:layout_constraintBottom_toTopOf="@id/buttonDelete"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/taskId"
         app:layout_constraintTop_toBottomOf="@+id/taskList" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskList"
-        android:layout_width="386dp"
-        android:layout_height="410dp"
+        android:layout_width="383dp"
+        android:layout_height="532dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/darker_gray"
         android:foregroundGravity="center_horizontal"
         android:padding="4dp"
-        android:background="@android:color/darker_gray"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/btnAddNewTask"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.104" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnAddNewTask"
@@ -107,8 +85,7 @@
         android:text="add new task"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
