--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         android:layout_width="383dp"
         android:layout_height="532dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/holo_blue_light"
         android:foregroundGravity="center_horizontal"
         android:padding="4dp"
         android:scrollbars="vertical"
