--- a/app/src/main/res/layout/add_task_form.xml
+++ b/app/src/main/res/layout/add_task_form.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/RecyclerViewGrey"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@android:color/holo_blue_light"
-    tools:context=".TaskFormActivity"
-    >
+    tools:context=".TaskFormActivity">
 
 
     <EditText
@@ -45,8 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="124dp"
-        android:text="Add Task"
         android:onClick="addTaskForm"
+        android:text="Add Task"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
