--- a/app/src/main/res/layout/completed_tasks.xml
+++ b/app/src/main/res/layout/completed_tasks.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".CompletedTasksActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,7 +12,7 @@
         android:layout_width="370dp"
         android:layout_height="517dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/holo_blue_light"
+        android:background="@color/RecyclerViewGrey"
         android:clipToPadding="false"
         android:foregroundGravity="center_horizontal"
         android:padding="4dp"
@@ -22,10 +23,10 @@
 
     <Button
         android:id="@+id/btnShowCompletedTasks"
-        android:onClick="openMain"
         android:layout_width="211dp"
         android:layout_height="65dp"
         android:layout_marginBottom="4dp"
+        android:onClick="openMain"
         android:text="SHOW UNCOMPLETED TASKS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
