--- a/app/src/main/res/layout/task_card_view.xml
+++ b/app/src/main/res/layout/task_card_view.xml
@@ -6,7 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="4dp"
     app:cardBackgroundColor="@android:color/white"
-    android:background="@android:color/holo_blue_light">
+    android:background="@android:color/holo_blue_light"
+    app:cardElevation="10dp"
+    app:cardPreventCornerOverlap="true"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
