--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskList"
-        android:layout_width="383dp"
-        android:layout_height="581dp"
+        android:layout_width="match_parent"
+        android:layout_height="548dp"
         android:background="@color/RecyclerViewGrey"
         android:foregroundGravity="center_horizontal"
         android:padding="4dp"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.103" />
+        android:scrollbars="vertical" />
 
-    <Button
-        android:id="@+id/btnShowCompletedTasks"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="47dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="16dp"
-        android:onClick="openCompletedTasks"
-        android:text="show completed tasks"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskList"
-        app:layout_constraintVertical_bias="0.779" />
+    <TableRow
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/taskList"
+        android:layout_gravity="bottom"
+        >
 
-    <Button
-        android:id="@+id/btnAddNewTask"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
-        android:onClick="openForm"
-        android:text="add new task"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskList"
-        app:layout_constraintVertical_bias="1.0" />
+        <Button
+            android:id="@+id/btnAddNewTask"
+            android:layout_width="179dp"
+            android:layout_height="match_parent"
+            android:onClick="openForm"
+            android:text="add new task" />
+
+        <Button
+            android:id="@+id/btnShowCompletedTasks"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="openCompletedTasks"
+            android:text="show completed tasks" />
+
+    </TableRow>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
